--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# custon
+checkpoints/
+.vscode/
+logs/*
+transformers-4.2.2.dist-info/
+plots/
+bin/
+.idea/
