support training acos_laptop

--- a/acos_laptop_mapping.json
+++ b/acos_laptop_mapping.json
@@ -1,130 +1,1 @@
-{
-    "texts": [
-        "design features of battery",
-        "general of battery",
-        "operation performance of battery",
-        "quality of battery",
-        "design features of company",
-        "general of company",
-        "operation performance of company",
-        "price of company",
-        "quality of company",
-        "design features of cpu",
-        "general of cpu",
-        "operation performance of cpu",
-        "price of cpu",
-        "quality of cpu",
-        "design features of display",
-        "general of display",
-        "operation performance of display",
-        "price of display",
-        "quality of display",
-        "usability of display",
-        "design features of fans&cooling",
-        "general of fans&cooling",
-        "operation performance of fans&cooling",
-        "quality of fans&cooling",
-        "design features of graphics",
-        "general of graphics",
-        "operation performance of graphics",
-        "usability of graphics",
-        "design features of hardware",
-        "general of hardware",
-        "operation performance of hardware",
-        "price of hardware",
-        "quality of hardware",
-        "usability of hardware",
-        "design features of hard disc",
-        "general of hard disc",
-        "miscellaneous of hard disc",
-        "operation performance of hard disc",
-        "price of hard disc",
-        "quality of hard disc",
-        "usability of hard disc",
-        "design features of keyboard",
-        "general of keyboard",
-        "miscellaneous of keyboard",
-        "operation performance of keyboard",
-        "portability of keyboard",
-        "price of keyboard",
-        "quality of keyboard",
-        "usability of keyboard",
-        "connectivity of laptop",
-        "design features of laptop",
-        "general of laptop",
-        "miscellaneous of laptop",
-        "operation performance of laptop",
-        "portability of laptop",
-        "price of laptop",
-        "quality of laptop",
-        "usability of laptop",
-        "design features of memory",
-        "general of memory",
-        "operation performance of memory",
-        "quality of memory",
-        "usability of memory",
-        "general of motherboard",
-        "operation performance of motherboard",
-        "quality of motherboard",
-        "design features of mouse",
-        "general of mouse",
-        "usability of mouse",
-        "connectivity of multimedia devices",
-        "design features of multimedia devices",
-        "general of multimedia devices",
-        "operation performance of multimedia devices",
-        "price of multimedia devices",
-        "quality of multimedia devices",
-        "usability of multimedia devices",
-        "design features of optical drives",
-        "general of optical drives",
-        "operation performance of optical drives",
-        "usability of optical drives",
-        "design features of os",
-        "general of os",
-        "miscellaneous of os",
-        "operation performance of os",
-        "price of os",
-        "quality of os",
-        "usability of os",
-        "design features of out of scope",
-        "general of out of scope",
-        "operation performance of out of scope",
-        "usability of out of scope",
-        "connectivity of ports",
-        "design features of ports",
-        "general of ports",
-        "operation performance of ports",
-        "portability of ports",
-        "quality of ports",
-        "usability of ports",
-        "connectivity of power supply",
-        "design features of power supply",
-        "general of power supply",
-        "operation performance of power supply",
-        "quality of power supply",
-        "general of shipping",
-        "operation performance of shipping",
-        "price of shipping",
-        "quality of shipping",
-        "design features of software",
-        "general of software",
-        "operation performance of software",
-        "portability of software",
-        "price of software",
-        "quality of software",
-        "usability of software",
-        "design features of support",
-        "general of support",
-        "operation performance of support",
-        "price of support",
-        "quality of support",
-        "general of warranty",
-        "quality of warranty"
-    ],
-    "sentiments": [
-        "negative",
-        "neutral",
-        "positive"
-    ]
-}
+{"texts": ["design features of battery", "general of battery", "operation performance of battery", "quality of battery", "design features of company", "general of company", "operation performance of company", "price of company", "quality of company", "design features of cpu", "general of cpu", "operation performance of cpu", "price of cpu", "quality of cpu", "design features of display", "general of display", "operation performance of display", "price of display", "quality of display", "usability of display", "design features of fans&cooling", "general of fans&cooling", "operation performance of fans&cooling", "quality of fans&cooling", "design features of graphics", "general of graphics", "operation performance of graphics", "usability of graphics", "design features of hardware", "general of hardware", "operation performance of hardware", "price of hardware", "quality of hardware", "usability of hardware", "design features of hard disc", "general of hard disc", "miscellaneous of hard disc", "operation performance of hard disc", "price of hard disc", "quality of hard disc", "usability of hard disc", "design features of keyboard", "general of keyboard", "miscellaneous of keyboard", "operation performance of keyboard", "portability of keyboard", "price of keyboard", "quality of keyboard", "usability of keyboard", "connectivity of laptop", "design features of laptop", "general of laptop", "miscellaneous of laptop", "operation performance of laptop", "portability of laptop", "price of laptop", "quality of laptop", "usability of laptop", "design features of memory", "general of memory", "operation performance of memory", "quality of memory", "usability of memory", "general of motherboard", "operation performance of motherboard", "quality of motherboard", "design features of mouse", "general of mouse", "usability of mouse", "connectivity of multimedia devices", "design features of multimedia devices", "general of multimedia devices", "operation performance of multimedia devices", "price of multimedia devices", "quality of multimedia devices", "usability of multimedia devices", "design features of optical drives", "general of optical drives", "operation performance of optical drives", "usability of optical drives", "design features of os", "general of os", "miscellaneous of os", "operation performance of os", "price of os", "quality of os", "usability of os", "design features of out of scope", "general of out of scope", "operation performance of out of scope", "usability of out of scope", "connectivity of ports", "design features of ports", "general of ports", "operation performance of ports", "portability of ports", "quality of ports", "usability of ports", "connectivity of power supply", "design features of power supply", "general of power supply", "operation performance of power supply", "quality of power supply", "general of shipping", "operation performance of shipping", "price of shipping", "quality of shipping", "design features of software", "general of software", "operation performance of software", "portability of software", "price of software", "quality of software", "usability of software", "design features of support", "general of support", "operation performance of support", "price of support", "quality of support", "general of warranty", "quality of warranty"], "sentiments": ["negative", "neutral", "positive"], "category2index": {"BATTERY#DESIGN_FEATURES": 0, "BATTERY#GENERAL": 1, "BATTERY#OPERATION_PERFORMANCE": 2, "BATTERY#QUALITY": 3, "COMPANY#DESIGN_FEATURES": 4, "COMPANY#GENERAL": 5, "COMPANY#OPERATION_PERFORMANCE": 6, "COMPANY#PRICE": 7, "COMPANY#QUALITY": 8, "CPU#DESIGN_FEATURES": 9, "CPU#GENERAL": 10, "CPU#OPERATION_PERFORMANCE": 11, "CPU#PRICE": 12, "CPU#QUALITY": 13, "DISPLAY#DESIGN_FEATURES": 14, "DISPLAY#GENERAL": 15, "DISPLAY#OPERATION_PERFORMANCE": 16, "DISPLAY#PRICE": 17, "DISPLAY#QUALITY": 18, "DISPLAY#USABILITY": 19, "FANS&COOLING#DESIGN_FEATURES": 20, "FANS&COOLING#GENERAL": 21, "FANS&COOLING#OPERATION_PERFORMANCE": 22, "FANS&COOLING#QUALITY": 23, "GRAPHICS#DESIGN_FEATURES": 24, "GRAPHICS#GENERAL": 25, "GRAPHICS#OPERATION_PERFORMANCE": 26, "GRAPHICS#USABILITY": 27, "HARDWARE#DESIGN_FEATURES": 28, "HARDWARE#GENERAL": 29, "HARDWARE#OPERATION_PERFORMANCE": 30, "HARDWARE#PRICE": 31, "HARDWARE#QUALITY": 32, "HARDWARE#USABILITY": 33, "HARD_DISC#DESIGN_FEATURES": 34, "HARD_DISC#GENERAL": 35, "HARD_DISC#MISCELLANEOUS": 36, "HARD_DISC#OPERATION_PERFORMANCE": 37, "HARD_DISC#PRICE": 38, "HARD_DISC#QUALITY": 39, "HARD_DISC#USABILITY": 40, "KEYBOARD#DESIGN_FEATURES": 41, "KEYBOARD#GENERAL": 42, "KEYBOARD#MISCELLANEOUS": 43, "KEYBOARD#OPERATION_PERFORMANCE": 44, "KEYBOARD#PORTABILITY": 45, "KEYBOARD#PRICE": 46, "KEYBOARD#QUALITY": 47, "KEYBOARD#USABILITY": 48, "LAPTOP#CONNECTIVITY": 49, "LAPTOP#DESIGN_FEATURES": 50, "LAPTOP#GENERAL": 51, "LAPTOP#MISCELLANEOUS": 52, "LAPTOP#OPERATION_PERFORMANCE": 53, "LAPTOP#PORTABILITY": 54, "LAPTOP#PRICE": 55, "LAPTOP#QUALITY": 56, "LAPTOP#USABILITY": 57, "MEMORY#DESIGN_FEATURES": 58, "MEMORY#GENERAL": 59, "MEMORY#OPERATION_PERFORMANCE": 60, "MEMORY#QUALITY": 61, "MEMORY#USABILITY": 62, "MOTHERBOARD#GENERAL": 63, "MOTHERBOARD#OPERATION_PERFORMANCE": 64, "MOTHERBOARD#QUALITY": 65, "MOUSE#DESIGN_FEATURES": 66, "MOUSE#GENERAL": 67, "MOUSE#USABILITY": 68, "MULTIMEDIA_DEVICES#CONNECTIVITY": 69, "MULTIMEDIA_DEVICES#DESIGN_FEATURES": 70, "MULTIMEDIA_DEVICES#GENERAL": 71, "MULTIMEDIA_DEVICES#OPERATION_PERFORMANCE": 72, "MULTIMEDIA_DEVICES#PRICE": 73, "MULTIMEDIA_DEVICES#QUALITY": 74, "MULTIMEDIA_DEVICES#USABILITY": 75, "OPTICAL_DRIVES#DESIGN_FEATURES": 76, "OPTICAL_DRIVES#GENERAL": 77, "OPTICAL_DRIVES#OPERATION_PERFORMANCE": 78, "OPTICAL_DRIVES#USABILITY": 79, "OS#DESIGN_FEATURES": 80, "OS#GENERAL": 81, "OS#MISCELLANEOUS": 82, "OS#OPERATION_PERFORMANCE": 83, "OS#PRICE": 84, "OS#QUALITY": 85, "OS#USABILITY": 86, "Out_Of_Scope#DESIGN_FEATURES": 87, "Out_Of_Scope#GENERAL": 88, "Out_Of_Scope#OPERATION_PERFORMANCE": 89, "Out_Of_Scope#USABILITY": 90, "PORTS#CONNECTIVITY": 91, "PORTS#DESIGN_FEATURES": 92, "PORTS#GENERAL": 93, "PORTS#OPERATION_PERFORMANCE": 94, "PORTS#PORTABILITY": 95, "PORTS#QUALITY": 96, "PORTS#USABILITY": 97, "POWER_SUPPLY#CONNECTIVITY": 98, "POWER_SUPPLY#DESIGN_FEATURES": 99, "POWER_SUPPLY#GENERAL": 100, "POWER_SUPPLY#OPERATION_PERFORMANCE": 101, "POWER_SUPPLY#QUALITY": 102, "SHIPPING#GENERAL": 103, "SHIPPING#OPERATION_PERFORMANCE": 104, "SHIPPING#PRICE": 105, "SHIPPING#QUALITY": 106, "SOFTWARE#DESIGN_FEATURES": 107, "SOFTWARE#GENERAL": 108, "SOFTWARE#OPERATION_PERFORMANCE": 109, "SOFTWARE#PORTABILITY": 110, "SOFTWARE#PRICE": 111, "SOFTWARE#QUALITY": 112, "SOFTWARE#USABILITY": 113, "SUPPORT#DESIGN_FEATURES": 114, "SUPPORT#GENERAL": 115, "SUPPORT#OPERATION_PERFORMANCE": 116, "SUPPORT#PRICE": 117, "SUPPORT#QUALITY": 118, "WARRANTY#GENERAL": 119, "WARRANTY#QUALITY": 120}}
